# mkdocs-git-committers-plugin-2

./: pyproject.toml
mkdocs_git_committers_plugin_2/: config.py  plugin.py
